...
    <string name="notes_hint">Any notes about this place.</string>
    <!--Strings used in DetailActivity-->
    <string name="name_label">Name:</string>
    <string name="address_label">Address:</string>
    <string name="num_visits_label">Number of visits:</string>
    <string name="dates_visited">Dates Visited:</string>
    <string name="add_visit">Add Visit</string>
    <string name="notes_label">Notes:</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="last_visit">Last visit:</string>
    <string name="existing_place_message">This place is already in your list!</string>
    <string name="desc_down_arrow">down arrow</string>
...
